@startuml

Hecho --> Categoria
Hecho --> Ubicacion

LectorDeArchivosCSV ..|> ILectorDeArchivos
LectorDeArchivosCSV ..> HechoFactory

HechoFactoryCSVFile ..|> HechoFactory

FactoryLector --> ILectorDeArchivos
FactoryLector --> LectorDeArchivosCSV

HechoFactoryCSVFile --> Hecho
NormalizadorAdapter ..|> INormalizadorAdapter
INormalizadorAdapter --> Hecho


'================== CONTENIDO ==================
class Categoria {
    - nombre: Strin
    - idCategoria: Long
}

class Ubicacion {
    - latitud: Double
    - longitud: Double
    - pais : String
    - ciudad : String
    - provincia : String
}

class Hecho {
    - id: Long
    - titulo: String
    - descripcion: String
    - categoria: Categoria
    - ubicacion: Ubicacion
    - fechaAcontecimiento: LocalDateTime
    - fechaCarga: LocalDateTime
    - enviado: Boolean
}

'================== IMPORTADOR ==================
class FactoryLector {
    + crearLector(File archivo): ILectorDeArchivos
    - obtenerExtension(String nombreArchivo): String
}

class HechoFactoryCSVFile{
    + crearHecho(String lineaLeida): Hecho
}

class LectorDeArchivosCSV{
    - hechoFactory: HechoFactory
    + importarHechos(File archivo): List<Hecho>
}

'================== INTERFACES ==================

interface HechoFactory {
    + crearHecho (String lineaLeida): Hecho
}

interface ILectorDeArchivos {
    + importarHechos(File archivo): List<Hecho>
}
interface INormalizadorAdapter{
    + obtenerHechoNormalizado(HechoOutputDTONormalizador) : Mono<Hecho>
}

'================== NORMALIZADOR ==================

class NormalizadorAdapter {
    - webClient : WebClient
    - timeOutMS : Integer
    + obtenerHechoNormalizado(HechoOutputDTONormalizador) : Mono<Hecho>
}

@enduml